# keep

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md  hatch_build.py  pyproject.toml
bench/: put_perf.py
bench/locomo/: ingest.py  judge_binary.py  llm.py  prep_dataset.py  query.py  simulate_continue_trace.py
claude-code-plugin/.claude-plugin/: plugin.json
claude-code-plugin/hooks/: hooks.json
claude-code-plugin/skills/keep/: SKILL.md
docs/: AGENT-GUIDE.md  API-SCHEMA.md  CLAUDE-DESKTOP.md  CONTINUATIONS.md  EDGE-TAGS.md  FLOW-ACTIONS.md  FLOWS.md  FLOW_STATE_DOCS.md  INDEX.md  KEEP-ANALYZE.md  KEEP-CONFIG.md  KEEP-EDIT.md  KEEP-FIND.md  KEEP-FLOW.md  KEEP-GET.md  KEEP-MCP.md  KEEP-NOW.md  KEEP-PROMPT.md  KEEP-PUT.md  META-TAGS.md  OPENCLAW-INTEGRATION.md  OUTPUT.md  PROMPTS.md  PYTHON-API.md  QUICKSTART.md  REFERENCE.md  RELEASING.md  TAGGING.md
docs/design/: BUILTIN-STATE-DOCS.md  FLOW-CONVERGENCE.md  STATE-ACTIONS.md  STATE-DOC-COMPOSITION.md  STATE-DOC-EXAMPLES.md  STATE-DOC-INTERACTION.md  STATE-DOC-SCHEMA.md  WATCHES.md  context-engine.md
keep/: __init__.py  __main__.py  _background_processing.py  _context_resolution.py  _daemon_client.py  _provider_lifecycle.py  analyzers.py  api.py  backend.py  builtin_state_docs.py  cli.py  config.py  context_cache.py  continuation.py  continuation_engine.py  continuation_env.py  continuation_executor.py  continuation_policy.py  continuation_store.py  daemon.py  daemon_client.py  daemon_server.py  document_store.py  errors.py  flow.py  flow_client.py  flow_engine.py  flow_env.py  flow_executor.py  flow_policy.py  git_ingest.py  help.py  ignore.py  integrations.py  logging_config.py  mcp.py  mcpb.py  model_lock.py  paths.py  pending_summaries.py  (+25 more)
keep/actions/: __init__.py  _item_scope.py  _tagging.py  analyze.py  delete.py  describe.py  extract_links.py  find.py  find_duplicates.py  find_supernodes.py  generate.py  get.py  list_parts.py  list_versions.py  move.py  ocr.py  put.py  resolve_edges.py  resolve_meta.py  stats.py  summarize.py  tag.py  traverse.py
keep/data/openclaw-plugin/: .mcp.json  build.mjs  index.ts  openclaw.plugin.json  package-lock.json  package.json
keep/data/system/: conversations.md  domains.md  ignore.md  meta-album.md  meta-artist.md  meta-genre.md  meta-learnings.md  meta-supernodes.md  meta-todo.md  now.md  prompt-agent-conversation.md  prompt-agent-openclaw-assemble.md  prompt-agent-query.md  prompt-agent-reflect.md  prompt-agent-session-end.md  prompt-agent-session-start.md  prompt-agent-subagent-start.md  prompt-openclaw-assemble.md  prompt-summarize-code.md  prompt-supernode-default.md  prompt-supernode-email.md  prompt-supernode-url.md  state-after-write.md  state-delete.md  state-find-deep.md  state-get-context.md  state-get.md  state-memory-search.md  state-move.md  state-openclaw-assemble.md  state-put.md  state-query-branch.md  state-query-explore.md  state-query-resolve.md  state-review-supernodes.md  state-stats.md  state-tag.md  tag-act.md  tag-attachment.md  (+10 more)
keep/langchain/: __init__.py  middleware.py  retriever.py  store.py  toolkit.py
keep/providers/: __init__.py  base.py  documents.py  embedding_cache.py  embeddings.py  gemini_client.py  http.py  llm.py  mlx.py  ollama_utils.py  summarization.py
langchain-keep/: README.md  pyproject.toml
later/: continuation-api-spec.md  continuation-decision-support-contract.md  continuation-design-docs-index.md  continuation-driven-memory-iteration.md  continuation-eli5.md  continuation-machine-architecture.md  continue-wire-contract-v1.md  design-meta-as-flows.md  design-prompt-state-alignment.md  design-supernode-review.md  discriminator-precompute-spec.md  draft-supernode-prompts.md  git-changelog-ingest.md  ignore-list.md  keep-er-projection-notes.md  local-first-continuation-implementation-outline.md  prompt-over-bindings.md  simplified-model-and-continuation-design.md  template-frame-state-contract.md  todo.txt  use-case-simulations-with-continuations.md
later/design/: design-find-cache-filtered-invalidation.md
scripts/: bump_version.py  release.sh
tests/: conftest.py  test_actions_runtime.py  test_cli.py  test_content_hash_skip.py  test_context_cache.py  test_continuation_engine.py  test_continue_api_first.py  test_core.py  test_daemon_client.py  test_daemon_server.py  test_deep_edges.py  test_deferred_embedding.py  test_delegation.py  test_document_store.py  test_edges.py  test_email_extraction.py  test_env_action_context.py  test_extract_links.py  test_failure_modes.py  test_find_context_projection_plan.py  test_find_tags.py  test_flow_engine.py  test_flow_host_contract.py  test_flow_integration.py  test_git_ingest.py  test_ignore.py  test_mcp.py  test_media.py  test_meta_resolution.py  test_normalize_id.py  test_ocr.py  test_part_line_ranges.py  test_parts.py  test_perf_stats.py  test_planner_stats.py  test_processors.py  test_prompt_doc_authority.py  test_put_default_id.py  test_remote_continuation.py  test_remote_flow.py  (+17 more)
(+6 files in other folders)
